--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,3 +1,16 @@
+// SPACERS
 $spacer-small: 5px;
 $spacer: 10px;
 $spacer-large: 20px;
+
+// BREAKPOINTS
+$breakpoint-desktop: 1280px;
+$breakpoint-tablet: 768px;
+$breakpoint-mobile: 400px;
+
+// COLORS
+$color-white: white;
+
+// OTHER
+$header-height: 60px;
+$footer-height: 30px;
