WIP: 7 architect page

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,7 +1,9 @@
 // SPACERS
 $spacer-small: 5px;
 $spacer: 10px;
+$spacer-medium: 15px;
 $spacer-large: 20px;
+$spacer-x-large: 30px;
 
 // BREAKPOINTS
 $breakpoint-desktop: 1280px;
@@ -9,6 +11,7 @@ $breakpoint-tablet: 768px;
 $breakpoint-mobile: 400px;
 
 // COLORS
+$color-black: black;
 $color-white: white;
 
 // OTHER
